# thesisforge

./: README.md  example_usage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml  python_publish.yml
src/thesisforge/: __init__.py
src/thesisforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/thesisforge/paper_organizer/: __init__.py  metadata_extractor.py  notes.py  pdf_manager.py
src/thesisforge/reference_manager/: __init__.py  bibtex.py  citation.py  doi.py
src/thesisforge/statistics/: descriptive.py  hypothesis.py  regression.py
src/thesisforge/utils/: helpers.py  logger.py
src/thesisforge/visualization/: styles.py  thesis_plots.py
tests/unit/: test_statistics.py  test_visualization.py
